# SMFramework_KT

./: CMakeLists.txt  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/brokenpc/smframework_kt/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/interpark/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/classifire/: haarcascade_mcs_lefteye.xml  haarcascade_mcs_mouth.xml  haarcascade_mcs_nose.xml  haarcascade_mcs_righteye.xml  lbpcascade_frontalface.xml
app/src/main/assets/glsl/: adjust_color.fsh  bilateral_filter.fsh  bilateral_filter.vsh  colorAlphaTest.fsh  edge_glow.fsh  fisheye_circle.fsh  gaussian_blur.fsh  gaussian_blur.vsh  geine_effect.fsh  geine_effect.vsh  noMVP_vert.vsh  primitive.fsh  primitive.vsh  primitive_circle.fsh  primitive_ring.fsh  primitive_solidrect.fsh  primitive_triangle.fsh  radial_alpha.fsh  shape_surface.fsh  sprite.fsh  sprite.vsh  sprite3d.fsh  sprite3d.vsh  sprite_circle.fsh  yuv2rgb.fsh
app/src/main/assets/sticker/: items.xml
app/src/main/cpp/: CMakeLists.txt  SMFramework_ImgPrc.cpp
app/src/main/java/com/brokenpc/smframework/: ClassHelper.kt  IDirector.kt  SMDirector.kt  SMSurfaceView.kt  SideMenu.kt
app/src/main/java/com/brokenpc/smframework/base/: DrawNode.kt  SMScene.kt  SMView.kt  UIContainerView.kt
app/src/main/java/com/brokenpc/smframework/downloader/: ImageDownloadRunnable.kt
app/src/main/java/com/brokenpc/smframework/nativeImageProcess/: ImageProcessing.kt
app/src/main/java/com/brokenpc/smframework/shader/: BlendFunc.kt  GL.kt  ProgAdjustColor.kt  ProgCameraPreview.kt  ProgEdgeGlow.kt  ProgGaussianBlur.kt  ProgGeineEffect2.kt  ProgPrimitive.kt  ProgPrimitiveRing.kt  ProgPrimitiveTriangle.kt  ProgSprite3D.kt  ProgStencil.kt  RenderCommand.kt  Shader.kt  ShaderManager.kt
app/src/main/java/com/brokenpc/smframework/util/: AppConst.kt  AppUtil.kt  BackPressable.kt  BitmapLoader.kt  FileManager.kt  FileUtils.kt  KeyGenerateUtil.kt  SMAsyncTask.kt  SingletonHolder.kt  tweenfunc.kt
app/src/main/java/com/brokenpc/smframework/view/: BaseTableView.kt  ClippingView.kt  Popup.kt  (+23 more)
app/src/main/java/com/brokenpc/smframework_kt/: MainActivity.kt
app/src/main/java/com/interpark/app/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/interpark/smframework/: ClassHelper.kt  IDirector.kt  SMDirector.kt  SMSurfaceView.kt  SideMenu.kt
app/src/main/jni/: SMFramework_ImgPrc.cpp  SMFramework_ImgPrc.h  SMFramework_ImgPrc_Def.h
app/src/main/res/layout/: spritebuilder_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/brokenpc/smframework_kt/: ExampleUnitTest.kt
app/src/test/java/com/interpark/app/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+377 files in other folders)
